<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
<string name="app_name">droid VNC server</string>
<string-array name="rotation_values">
<item>0</item>
<item>90</item>
<item>180</item>
<item>270</item>
</string-array>
<string-array name="rotation_strings">
<item>0</item>
<item>90</item>
<item>180</item>
<item>270</item>
</string-array>
<string-array name="scale_values">
<item>150</item>
<item>100</item> 
<item>50</item>
<item>30</item>
<item>20</item>
</string-array>
<string-array name="scale_strings">
<item>150</item>
<item>100</item>
<item>50</item>
<item>30</item>
<item>20</item>
</string-array>
<string-array name="display_mode_strings">
<item>Auto-detect</item>
<item>Framebuffer</item>
<item>Gralloc (Tegra2)</item>
<!-- <item>ADB</item>  -->
<item>SurfaceFlinger (2.3+)</item>
</string-array>
<string-array name="display_mode_values">
<item>auto</item> 
<item>fb</item>  
<item>gralloc</item>
<!-- <item>adb</item> -->
<item>gingerbread</item>
</string-array>
<string-array name="sleep_strings">
<item>On</item>
<item>Off</item>
</string-array>
<string-array name="startonboot_strings">
<item>True</item>
<item>False</item>
</string-array>
<string-array name="startonboot_values">
<item>On</item>
<item>Off</item>
</string-array>
<string name="device_info_fmt">
droid VNC version: <xliff:g id="application_version">%s</xliff:g>\n
Device model: <xliff:g id="device_model">%s</xliff:g>\n
Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
Build number: <xliff:g id="build_number">%s</xliff:g>\n
CPU ABI: <xliff:g id="cpu_abi">%s</xliff:g>\n
</string>
    <string name="server_settings">VNC Server settings</string>
    <string name="password_summary">Protect your VNC connection</string>
    <string name="password_title">VNC password</string>
    <string name="port_summary">Note: It will not show error if cannot bind port</string>
    <string name="port_title">VNC port</string>
    <string name="boot_summary">Warning! Just activate if you have your daemon running fine.</string>
    <string name="boot_title">Start server on boot</string>
    <string name="display_settings">Display settings</string>
    <string name="rotate_summary">Rotate screen if you like</string>
    <string name="rotate_title">Rotation</string>
    <string name="scale_summary">Only 100 and 50 working for now</string>
    <string name="scale_title">Scale Screen</string>
    <string name="display_summary">Change if you are experiencing display issues</string>
    <string name="display_title">Display Access Method</string>
    <string name="screen_title">"Don&apos;t Let Screen Turn off"</string>
    <string name="notify_summary">Show notification on status bar</string>
    <string name="notify_title">Notify When Client Connects</string>
    <string name="misc_title">Misc Settings</string>
    <string name="root_summary">Unselect this if you do not want to run the server as root.</string>
    <string name="root_title">Execute server as root</string>
    <string name="btn_settings">Settings</string>
    <string name="already_running">Already running!</string>
    <string name="restart_server">Restart server?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_continue">Cannot continue</string>
    <string name="no_root_msg">\"You do not have root permissions.\nPlease root your phone
        first!\n\nDo you want to continue anyway?\"
    </string>
    <string name="no">No</string>
    <string name="about">"About"</string>
    <string name="settings_hint">"Don't forget to stop/start the server after changes"</string>
    <string name="running">Running</string>
    <string name="stopped">Stopped</string>
    <string name="usb_connect_msg">" You can connect through USB with:"</string>
    <string name="or">"or"</string>
    <string name="adb_hint">"(use adb to forward ports)"</string>
    <string name="connect_to">"Connect to:"</string>
    <string name="could_not_start_server">"Could not start server :("</string>
    <string name="could_not_stop_server">"Could not stop server :("</string>
    <string name="close">Close</string>
    <string name="no_network_connected">"Not connected to a network."</string>
    <string name="vnc_state">Vnc State</string>
    <string name="vnc_state_summary">Show VNC state info</string>

</resources>
