<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/server_settings" >
        <EditTextPreference
            android:key="password"
            android:password="true"
            android:summary="@string/password_summary"
            android:title="@string/password_title" >
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="5901"
            android:inputType="number"
            android:key="port"
            android:summary="@string/port_summary"
            android:title="@string/port_title" >
        </EditTextPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="startdaemononboot"
            android:summaryOff="@string/boot_summary"
            android:summaryOn="@string/boot_summary"
            android:title="@string/boot_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/display_settings" >
        <ListPreference
            android:defaultValue="180"
            android:entries="@array/rotation_strings"
            android:entryValues="@array/rotation_values"
            android:key="rotation"
            android:summary="@string/rotate_summary"
            android:title="@string/rotate_title" >
        </ListPreference>
        <ListPreference
            android:defaultValue="100"
            android:entries="@array/scale_strings"
            android:entryValues="@array/scale_values"
            android:key="scale"
            android:summary="@string/scale_summary"
            android:title="@string/scale_title" >
        </ListPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="rotate_zte"
            android:summary="Some ZTE devices have the framebuffer rotated."
            android:title="Rotate display by 180º" >
        </CheckBoxPreference>

        <ListPreference
            android:defaultValue="auto"
            android:entries="@array/display_mode_strings"
            android:entryValues="@array/display_mode_values"
            android:key="displaymode"
            android:summary="@string/display_summary"
            android:title="@string/display_title" >
        </ListPreference>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screenturnoff"
            android:title="@string/screen_title" >
        </CheckBoxPreference>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notifyclient"
            android:summary="@string/notify_summary"
            android:title="@string/notify_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/misc_title" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="asroot"
            android:summary="@string/root_summary"
            android:title="@string/root_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <Preference android:title="Work Now"
                android:key="work_now"
                />

</PreferenceScreen>